...
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textColor="@color/color_on_surface_emphasis_medium"
                        app:discTitle="@{disc}"
                        app:layout_constraintBottom_toBottomOf="@+id/img_overflow_menu"
                        app:layout_constraintEnd_toStartOf="@+id/img_overflow_menu"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="@string/disc_title" />

                    <ImageView
                        android:id="@+id/img_overflow_menu"
...
